fix alignment issues on orderbook

--- a/packages/frontend/app/routes/trade/orderbook/orderbook.module.css
+++ b/packages/frontend/app/routes/trade/orderbook/orderbook.module.css
@@ -10,6 +10,10 @@
 .orderBookContainer {
     width: 100%;
     font-size: 0.8rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 .orderBookBlockMid {
@@ -65,4 +69,30 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.1);
+}
+
+.orderSlotsWrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    position: relative;
+}
+
+.obGradientEffect {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20%;
+    opacity: 0.05;
+}
+.obGradientEffect.smaller {
+    opacity: 0.1;
+    height: 5%;
+}
+
+.obGradientEffectBottom {
+    top: auto;
+    bottom: 0;
 }
